Revert "doc: `--gui` -> `-gui` (both supported) (#89)"
This reverts commit 2406c55dc60e51c2400fa7e30e73be26aa716e27.

--- a/.github/templates/nfpm-gui.yaml
+++ b/.github/templates/nfpm-gui.yaml
@@ -13,7 +13,7 @@ description: |
   Provides familiar commands like show, log, diff, and a staging workflow
   for safe, reviewable changes to your AWS secrets and parameters.
   .
-  This package includes GUI support via the -gui flag.
+  This package includes GUI support via the --gui flag.
   Requires GTK3 and WebKit2GTK runtime libraries.
 homepage: "https://github.com/mpyw/suve"
 license: "MIT"
